--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -50,9 +50,37 @@
       <div class="offcanvas__content">
          <div class="offcanvas__top mb-70 d-flex justify-content-between align-items-center">
             <div class="offcanvas__logo logo">
-               <a href="{% url 'index' %}">
-                  <img src="{{settings.logo.url}}" style="width: 20%;" alt="logo">
-               </a>
+               {% if user.is_authenticated %}
+                  {% if user.profile_image %}
+                  <a href="{% url 'profile' user.username %}" class="d-flex align-items-center">
+                  <span>
+                     {% if user.profile_image %}
+                     <!-- <div class="profile__main-thumb"> -->
+                     <img src="{{user.profile_image.url}}" style="width: 50px; height: 50px; border-radius: 50%;" alt="">
+                     <!-- </div>                                       -->
+                     {% else %}
+                     <svg width="17" height="21" viewBox="0 0 17 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <circle cx="8.57894" cy="5.77803" r="4.77803" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M1.00002 17.2014C0.998732 16.8655 1.07385 16.5337 1.2197 16.2311C1.67736 15.3158 2.96798 14.8307 4.03892 14.611C4.81128 14.4462 5.59431 14.336 6.38217 14.2815C7.84084 14.1533 9.30793 14.1533 10.7666 14.2815C11.5544 14.3367 12.3374 14.4468 13.1099 14.611C14.1808 14.8307 15.4714 15.27 15.9291 16.2311C16.2224 16.8479 16.2224 17.564 15.9291 18.1808C15.4714 19.1419 14.1808 19.5812 13.1099 19.7918C12.3384 19.9634 11.5551 20.0766 10.7666 20.1304C9.57937 20.2311 8.38659 20.2494 7.19681 20.1854C6.92221 20.1854 6.65677 20.1854 6.38217 20.1304C5.59663 20.0773 4.81632 19.9641 4.04807 19.7918C2.96798 19.5812 1.68652 19.1419 1.2197 18.1808C1.0746 17.8747 0.999552 17.5401 1.00002 17.2014Z" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                     </svg> 
+                     {% endif %}
+                  </span>
+                  </a>
+                  {% else %}
+                  <a href="{% url 'profile' user.username %}" class="d-flex align-items-center">
+                  <span>
+                     <svg width="17" height="21" viewBox="0 0 17 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <circle cx="8.57894" cy="5.77803" r="4.77803" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M1.00002 17.2014C0.998732 16.8655 1.07385 16.5337 1.2197 16.2311C1.67736 15.3158 2.96798 14.8307 4.03892 14.611C4.81128 14.4462 5.59431 14.336 6.38217 14.2815C7.84084 14.1533 9.30793 14.1533 10.7666 14.2815C11.5544 14.3367 12.3374 14.4468 13.1099 14.611C14.1808 14.8307 15.4714 15.27 15.9291 16.2311C16.2224 16.8479 16.2224 17.564 15.9291 18.1808C15.4714 19.1419 14.1808 19.5812 13.1099 19.7918C12.3384 19.9634 11.5551 20.0766 10.7666 20.1304C9.57937 20.2311 8.38659 20.2494 7.19681 20.1854C6.92221 20.1854 6.65677 20.1854 6.38217 20.1304C5.59663 20.0773 4.81632 19.9641 4.04807 19.7918C2.96798 19.5812 1.68652 19.1419 1.2197 18.1808C1.0746 17.8747 0.999552 17.5401 1.00002 17.2014Z" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                     </svg>
+                  </span>
+                  </a>
+                  {% endif %}
+               {% else %}
+               <a href="{% url 'login' %}"><b>Войти | </b></a>
+               <a href="{% url 'register' %}"><b> Создать аккаунт</b></a>
+               {% endif %}
+
             </div>
          </div>
          <div class="offcanvas__category pb-40">
@@ -189,7 +217,29 @@
                      <div class="tp-header-top-menu d-flex align-items-center justify-content-end">
                         <div class="tp-header-top-menu-item tp-header-setting">
                            {% if user.is_authenticated %}
-                           <span class="tp-header-setting-toggle" id="tp-header-setting-toggle">Настройки аккаунта</span>
+                           <div class="tp-header-login d-none d-lg-block">
+                              <a href="{% url 'profile' user.username %}" class="d-flex align-items-center">
+                                 <div class="tp-header-login-icon">
+                                    <span>
+                                       {% if user.profile_image %}
+                                       <!-- <div class="profile__main-thumb"> -->
+                                       <img src="{{user.profile_image.url}}" style="width: 100%; height: 100%; border-radius: 50%;" alt="">
+                                       <!-- </div>                                       -->
+                                       {% else %}
+                                       <svg width="17" height="21" viewBox="0 0 17 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                          <circle cx="8.57894" cy="5.77803" r="4.77803" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                          <path fill-rule="evenodd" clip-rule="evenodd" d="M1.00002 17.2014C0.998732 16.8655 1.07385 16.5337 1.2197 16.2311C1.67736 15.3158 2.96798 14.8307 4.03892 14.611C4.81128 14.4462 5.59431 14.336 6.38217 14.2815C7.84084 14.1533 9.30793 14.1533 10.7666 14.2815C11.5544 14.3367 12.3374 14.4468 13.1099 14.611C14.1808 14.8307 15.4714 15.27 15.9291 16.2311C16.2224 16.8479 16.2224 17.564 15.9291 18.1808C15.4714 19.1419 14.1808 19.5812 13.1099 19.7918C12.3384 19.9634 11.5551 20.0766 10.7666 20.1304C9.57937 20.2311 8.38659 20.2494 7.19681 20.1854C6.92221 20.1854 6.65677 20.1854 6.38217 20.1304C5.59663 20.0773 4.81632 19.9641 4.04807 19.7918C2.96798 19.5812 1.68652 19.1419 1.2197 18.1808C1.0746 17.8747 0.999552 17.5401 1.00002 17.2014Z" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                       </svg> 
+                                       {% endif %}
+                                    </span>
+                                 </div>
+                                 <div class="tp-header-login-content d-none d-xl-block">
+                                    <span>Профиль</span>
+                                    <h5 class="tp-header-login-title">{{user.username}}</h5>
+                                 </div>
+                              </a>
+                           </div>
+                           <!-- <span class="tp-header-setting-toggle" id="tp-header-setting-toggle">Настройки аккаунта</span>
                            <ul>
                               <li>
                                  <a href="{% url 'profile' user.username %}">Профиль</a>
@@ -197,7 +247,7 @@
                               <li>
                                  <a href="{% url 'logout' %}">Выйти</a>
                               </li>
-                           </ul>
+                           </ul> -->
                            {% else %}
                            <a href="{% url 'login' %}"><b>Войти | </b></a>
                            <a href="{% url 'register' %}"><b> Создать аккаунт</b></a>
