--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -48,7 +48,7 @@
                                  </a>
                               </div>
                               <div class="tp-login-option-item">
-                                 <a href="{% provider_login_url 'telegram' %}">
+                                 <a href="#">
                                     <img src="{% static 'assets/img/icon/login/Telegram_2019_Logo.svg.png' %}" style="width: 30%;" alt="">
                                  </a>
                               </div>
