--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -280,7 +280,7 @@
                               <li><a href="{% url 'index' %}">Главная</a> </li>
                               <li> <a href="{% url 'about' %}">О нас</a></li>
                               <li> <a href="{% url 'news' %}">Новости</a></li>
-                              <li><a href="{% url 'category' %}">Категории</a></li>
+                              <li><a href="{% url 'category' %}">Каталог</a></li>
                               <li><a href="{% url 'products' %}">Все продукты</a></li>
                               <li><a href="{% url 'contact' %}">Контакты</a></li>
                            </ul>
