--- a/templates/base/about.html
+++ b/templates/base/about.html
@@ -116,7 +116,7 @@
                      <div class="tp-counter-content">
                         <h4><span class="purecounter" data-purecounter-duration="1"
                               data-purecounter-end="{{data.clients}}"></span>+</h4>
-                        <p>Счастливые клиенты</p>
+                        <p>{{data.clients_title}}</p>
                      </div>
                   </div>
                   <div class="tp-counter-item d-flex align-items-start mb-30">
@@ -148,7 +148,7 @@
                      <div class="tp-counter-content">
                         <h4><span class="purecounter" data-purecounter-duration="1"
                               data-purecounter-end="{{data.employees}}"></span>+</h4>
-                        <p>Профессиональных сотрудников</p>
+                        <p>{{data.employees_title}}</p>
                      </div>
                   </div>
                   <div class="tp-counter-item d-flex align-items-start mb-30">
@@ -180,7 +180,7 @@
                      <div class="tp-counter-content">
                         <h4><span class="purecounter" data-purecounter-duration="1"
                               data-purecounter-end="{{data.orders}}"></span>+</h4>
-                        <p>Заказов в месяц</p>
+                        <p>{{data.orders_title}}</p>
                      </div>
                   </div>
                   <div class="tp-counter-item d-flex align-items-start mb-30">
@@ -203,7 +203,7 @@
                      <div class="tp-counter-content">
                         <h4><span class="purecounter" data-purecounter-duration="1"
                               data-purecounter-end="{{data.products}}"></span>+</h4>
-                        <p>Качественных продуктов</p>
+                        <p>{{data.products_title}}</p>
                      </div>
                   </div>
                </div>
