--- a/templates/shop/product-details.html
+++ b/templates/shop/product-details.html
@@ -119,7 +119,7 @@
                                     <button class="tp-product-details-add-to-cart-btn w-100 tp-product-compare-btn" data-product-id="{{ product.id }}">Добавить в сравнение</button>
                                  </div>
                               </div>
-                              <a href="https://wa.me/+996771244745/?text=Здравствуйте! Я хочу купить {{product.title}}. Можем ли мы обсудить детали?"><button class="tp-product-details-buy-now-btn w-100">Купить сейчас</button></a>
+                              <a href="https://wa.me/{{settings.phone}}/?text=Здравствуйте! Я хочу купить {{product.title}}. Можем ли мы обсудить детали?"><button class="tp-product-details-buy-now-btn w-100">Купить сейчас</button></a>
                               
                            </div>
                            <div class="tp-product-details-social">
