--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -10130,6 +10130,9 @@ only screen and (min-width: 576px) and (max-width: 767px),
   font-weight: 500;
   line-height: 1.07;
   margin-bottom: 12px;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
@@ -26407,4 +26410,15 @@ only screen and (min-width: 576px) and (max-width: 767px),
     margin: auto;
     display: block  ;
   }
+}
+
+
+.make_center {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+
+}
+.tp-postbox-details-top{
+  width: 100%;
 }
