--- a/templates/include/footer.html
+++ b/templates/include/footer.html
@@ -1,6 +1,8 @@
 {% load static %}
 
 <!-- footer area start -->
+{% include "include/quiz.html" %}
+
       <footer>
         <div class="tp-footer-area" data-bg-color="footer-bg-grey">
            <div class="tp-footer-top pt-95 pb-40">
