--- a/templates/include/homepage.html
+++ b/templates/include/homepage.html
@@ -22,6 +22,8 @@
    <link rel="stylesheet" href="{% static 'assets/css/flaticon_shofy.css' %}">
    <link rel="stylesheet" href="{% static 'assets/css/spacing.css' %}">
    <link rel="stylesheet" href="{% static 'assets/css/main.css' %}">
+   <link rel="stylesheet" href="{% static 'quiz/style.css' %}">
+
 </head>
 
 <body>
@@ -48,6 +50,8 @@
    <script src="{% static 'assets/js/imagesloaded-pkgd.js' %}"></script>
    <script src="{% static 'assets/js/ajax-form.js' %}"></script>
    <script src="{% static 'assets/js/main.js' %}"></script>
+   <script src="{% static 'quiz/index.js' %}"></script>
+
    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
    <script>
 
