--- a/templates/include/quiz.html
+++ b/templates/include/quiz.html
@@ -110,7 +110,7 @@
                     <h3>Оставьте ваши данные</h3>
                   </div>
                   <div class="inp-form">
-                    <input name="name" type="text" placeholder="Имя">
+                    <input name="name" type="text" placeholder="Имя" required>
                   </div>
                   <div class="inp-form">
                     <input name="phone" type="text" placeholder="Телефон" required>
