some changes to the quiz

--- a/templates/include/quiz.html
+++ b/templates/include/quiz.html
@@ -1,11 +1,11 @@
 {% load static %}
 <div class="quiz">
     <div class="quiz__error">
-        <div class="reveal alert alert-danger">Выберите один из предложенных вариант!</div>
+        <div class="reveal alert alert-danger">Выберите один из предложенных вариантов!</div>
         <button class="btn btn-primary" id="ok_btn">Ок</button>
     </div>
     <div id="quiz_activate" class="quiz__top">
-        <span>Пройдите опрос</span>
+        <span>Подобрать ноутбук</span>
     </div>
     <div class="quiz__bottom">
         <div class='form2'>
@@ -104,9 +104,9 @@
                 </div>
             </fieldset>
             <fieldset class="quiz__block">
-                <span>Викторина принята <br>Последний шаг! </span>
+                <span>Последний шаг! </span>
                 <div class="form">
-                    <h3>Оставьте ваши данные</h3>
+                    <h4>Оставьте ваши данные</h4>
                   </div>
                   <div class="inp-form">
                     <input id="name" type="text" placeholder="Имя" required>
