--- a/templates/include/quiz.html
+++ b/templates/include/quiz.html
@@ -1,5 +1,8 @@
 {% load static %}
 <div class="quiz">
+    <div id="quiz_deactivate" class="quiz_activate">
+        <span class="btn-close btn-close-white"></span>
+    </div>
     <div class="quiz__error">
         <div class="reveal alert alert-danger">Выберите один из предложенных вариантов!</div>
         <button class="btn btn-primary" id="ok_btn">Ок</button>
